--- a/source/scss/global/_variables.scss
+++ b/source/scss/global/_variables.scss
@@ -6,6 +6,11 @@ $colorSubtitle: #bfbfbf;
 $colorBackground: #f0f0f0;
 $colorBorder: #f1f1f1;
 $colorBackInput: #f8f8f8;
+$colorFeedTime: #979797;
+$colorTaskTitle: #fd566f;
+$colorTime: #9c9c9c;
+$colorSearchAside: #c0c0c0;
+$colorTriangle: #a889e9;
 // gradients
 $gradientBaseStart: #fc7858;
 $gradientBaseEnd: #fd4e75;
@@ -23,11 +28,9 @@ $gradientVkStart: #f48982;
 $gradientVkEnd: #fbda89;
 // sizes
 $sizeLogo: 30px;
-$sizeMoneyNumber: 20px;//h2
 $sizeSectionTitle: 14px;//h3
 $sizeName: 13px;//h4
 $sizeSimpleText: 12px;//p
-$sizeSubtitle: 10px;//h5
 $sizeFeedTime: 8px;//h6
 $sizeStep: 5px;
 // weight
