--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -519,20 +519,25 @@ header nav img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: 100px;
 }
 
 .items {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  width: 145px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 45px;
+  margin-left: 10px;
+  padding-left: 35px;
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -781,6 +786,7 @@ footer {
   }
   .for-nav {
     position: fixed;
+    z-index: 1;
   }
   .sidebar {
     position: fixed;
