--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,9 @@
 @import "./components/nav";
 @import "./components/header";
 @import "./components/main";
+@import "./components/aside";
+@import "./components/footer";
+
 .wrapper {
     display: flex;
     font-family:'Lato', sans-serif;
@@ -52,14 +55,7 @@
 .s5, .s6 {
     flex: 1 1 240px;
 }
-aside {
-    height: 100%;
-    background: darkred;
-}
-footer {
-    height: 220px;
-    background: darkmagenta;
-}
+
 
 .aside {
     display: flex;
