--- a/source/scss/components/_text.scss
+++ b/source/scss/components/_text.scss
@@ -8,7 +8,7 @@ h2 {
 }
 
 h3 {
-    @include fontProperties($sizeSectionTitle, $colorTitle);
+    @include fontProperties($size: $sizeSectionTitle, $color: $colorTitle);
 }
 
 h4 {
