fix: refs responsived rigth

--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -9,7 +9,7 @@ header {
             align-items: center;
             border-right: 1px solid $colorBorder;
             border-left: 1px solid $colorBorder;
-            padding: 0 20px;
+            padding: 20px;
         }
         img {
             border-right: 1px solid $colorBorder;
