fix: header input fixed

--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -15,6 +15,9 @@ header {
             border-right: 1px solid $colorBorder;
         }
     }
+    h4 {
+        @include fontGradientProperties($sizeName);
+    }
 }
 
 .flex {
@@ -88,6 +91,14 @@ header {
     justify-content: center;
     align-items: center;
     border-right: 1px solid $colorBorder;
+    &:after {
+        content: '';
+        position: absolute;
+        right: calc(50% - 137px);
+        width: 16px;
+        height: 16px;
+        background: url(../img/search.png) no-repeat center/cover;
+    }
     input {
         width: 300px;
         height: 34px;
@@ -96,26 +107,6 @@ header {
         background: $colorBackInput;
         border: 1px solid $colorBorder;
         border-radius: 17px;
-    }
-    button {
-        content: '';
-        position: absolute;
-        right: calc(50% - 137px);
-        width: 16px;
-        height: 16px;
-        background: url(../img/search.png) no-repeat center;
-        border: none;
-    }
-}
-
-.caption {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 30px 0 18px;
-    h4 {
-        padding-bottom: 9px;
-        @include fontGradientProperties($sizeName);
     }
 }
 
