--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -158,8 +158,8 @@ h2 {
   font-size: 20px;
   font-weight: 700;
   color: transparent;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
   -webkit-background-clip: text;
 }
 
@@ -222,8 +222,8 @@ h6 {
   font-size: 180deg;
   font-weight: 700;
   color: transparent;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
   -webkit-background-clip: text;
 }
 
@@ -236,8 +236,8 @@ h6 {
 }
 
 .sidebar__wrapper {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(180deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(180deg, #fc7858, #fd4e75);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -318,11 +318,20 @@ header nav a {
           align-items: center;
   border-right: 1px solid #f1f1f1;
   border-left: 1px solid #f1f1f1;
-  padding: 0 20px;
+  padding: 20px;
 }
 
 header nav img {
   border-right: 1px solid #f1f1f1;
+}
+
+header h4 {
+  font-size: 13px;
+  font-weight: 700;
+  color: transparent;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+  -webkit-background-clip: text;
 }
 
 .flex {
@@ -335,8 +344,8 @@ header nav img {
   position: relative;
   width: 34px;
   height: 18px;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
   border-radius: 9px;
 }
 
@@ -373,8 +382,8 @@ header nav img {
 .icon {
   width: 20px;
   height: 100%;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
   background-clip: content-box;
 }
 
@@ -436,6 +445,15 @@ header nav img {
   border-right: 1px solid #f1f1f1;
 }
 
+.nav__search:after {
+  content: '';
+  position: absolute;
+  right: calc(50% - 137px);
+  width: 16px;
+  height: 16px;
+  background: url(../img/search.png) no-repeat center/cover;
+}
+
 .nav__search input {
   width: 300px;
   height: 34px;
@@ -444,40 +462,6 @@ header nav img {
   background: #f8f8f8;
   border: 1px solid #f1f1f1;
   border-radius: 17px;
-}
-
-.nav__search button {
-  content: '';
-  position: absolute;
-  right: calc(50% - 137px);
-  width: 16px;
-  height: 16px;
-  background: url(../img/search.png) no-repeat center;
-  border: none;
-}
-
-.caption {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 0 30px 0 18px;
-}
-
-.caption h4 {
-  padding-bottom: 9px;
-  font-size: 13px;
-  font-weight: 700;
-  color: transparent;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
-  -webkit-background-clip: text;
 }
 
 .burger {
@@ -596,8 +580,8 @@ header nav img {
   font-size: 12px;
   font-weight: 700;
   color: transparent;
-  background-image: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
-  background-image: linear-gradient(270deg, #fc7858, #fd4e75);
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
   -webkit-background-clip: text;
 }
 
@@ -617,7 +601,127 @@ aside {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
-  background: darkred;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+aside form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+}
+
+aside form a {
+  width: 33%;
+}
+
+aside label {
+  display: block;
+  height: 48px;
+}
+
+aside label[for="aside__btn-1"] {
+  background: url(../img/chat/users.png) no-repeat center;
+}
+
+aside label[for="aside__btn-2"] {
+  background: url(../img/chat/chat.png) no-repeat center;
+}
+
+aside label[for="aside__btn-3"] {
+  background: url(../img/chat/like.png) no-repeat center;
+}
+
+.contacts {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  height: 250px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background: #ffffff;
+}
+
+.contact__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.contact__item:last-child {
+  border: none;
+}
+
+.contact__item img {
+  width: 42px;
+  height: 42px;
+  -o-object-fit: none;
+     object-fit: none;
+  -o-object-position: center 15%;
+     object-position: center 15%;
+}
+
+.contact__item a {
+  width: 20px;
+  height: 20px;
+  margin-left: auto;
+  background: url(../img/chat/tochat.png) no-repeat center;
+}
+
+.search {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 15px 20px;
+  background: #f8f8f8;
+}
+
+.search:after {
+  content: '';
+  position: absolute;
+  right: calc(26% - 19px);
+  width: 19px;
+  height: 19px;
+  background: url(../img/search.png) no-repeat center/cover;
+}
+
+.search input {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 165px;
+          flex: 0 1 165px;
+  font-size: 10px;
+  font-weight: 300;
+  color: #bfbfbf;
+  padding-bottom: 6px;
+  background: #f8f8f8;
+  border: none;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.search button {
+  width: 19px;
+  height: 19px;
+  border: none;
+  background: transparent url(../img/chat/edit.png) no-repeat center/cover;
 }
 
 footer {
@@ -721,6 +825,24 @@ a[href*="vk"] {
           flex-direction: column;
 }
 
+.caption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 30px 0 18px;
+}
+
+.caption h4 {
+  padding-bottom: 9px;
+}
+
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -813,9 +935,9 @@ a[href*="vk"] {
     margin-left: auto;
   }
   header nav .nav__search {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
     -webkit-box-flex: 1;
         -ms-flex: 1 1 1100px;
             flex: 1 1 1100px;
@@ -876,7 +998,19 @@ a[href*="vk"] {
 
 @media (max-width: 700px) {
   .flex:nth-child(2n+1) {
-    display: none;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    height: 50px;
+  }
+  .flex:nth-child(2n+1) a {
+    padding: 0 calc((100vw - 146px)/12);
+  }
+  .flex:last-child {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
