--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -17,6 +17,17 @@
     flex: 1 1 auto;
     @include column;
 }
+
+.caption {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 30px 0 18px;
+    h4 {
+        padding-bottom: 9px;
+    }
+}
+
 // main
 .row {
     display: flex;
@@ -81,7 +92,7 @@
                 margin-left: auto;
             }
             .nav__search {
-                order: 1;
+                order: 2;
                 flex: 1 1 1100px;
                 input {
                     width: 90%;
@@ -134,6 +145,14 @@
 
 @media (max-width: 700px) {
     .flex:nth-child(2n+1) {
-        display: none;
+        order: 1;
+        height: 50px;
+        a {
+            padding: 0 calc((100vw - 146px)/12);
+        }
+    }
+    .flex:last-child {
+        justify-content: space-between;
+        width: 100%;
     }
 }
